parser/tests/bad/sub02-3.st
% 'function' must ends with a 'result' statement
%   no result

function f(var i: int) : int
  i := 0
end f
